--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "axios": "^0.19.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-native-testing-library": "^1.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0"
   },
@@ -33,6 +34,7 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/react": "^9.4.0"
+    "@testing-library/react": "^9.4.0",
+    "moxios": "^0.4.0"
   }
 }
