--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^16.12.0",
     "react-native-testing-library": "^1.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "react-select": "^3.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
