--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-native-testing-library": "^1.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
-    "react-select": "^3.0.8"
+    "react-select": "^3.0.8",
+    "react-table": "^7.0.0-rc.16"
   },
   "scripts": {
     "start": "react-scripts start",
