--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "highcharts": "^8.0.0",
+    "highcharts-react-official": "^3.0.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
