--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-table": "^7.0.0-rc.16"
   },
   "scripts": {
-    "start": "react-scripts start",
+    
+    "start": "HTTPS=true react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
