Change yarn to npm in config yml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
             path: test-results
         - run:
             name: Install JUnit coverage reporter
-            command: yarn add --dev jest-junit
+            command: npm install --dev jest-junit
         - run:
             name: Run tests with JUnit as reporter
             command: jest --ci --runInBand --reporters=default --reporters=jest-junit
