--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,17 +2,18 @@ version: 2.1
 jobs:
   build:
     docker: 
-        - image: circleci/node:4.8.2 # the primary container, where your job's commands are run
+        - image: circleci/node:12 # the primary container, where your job's commands are run
     steps:
         - checkout # check out the code in the project directory
         - run: echo "hello world" # run the `echo` command
-        - store_test_results:
-            path: test-results
-        - run:
-            name: Install JUnit coverage reporter
-            command: npm install --dev jest-junit
-        - run:
-            name: Run tests with JUnit as reporter
-            command: jest --ci --runInBand 
-            environment:
-                JEST_JUNIT_OUTPUT_DIR: "reports/junit/js-test-results.xml"
+        - run: npm install 
+        - run: CI=true npm run build
+  test:
+    docker:
+        - image: circleci/node:12 # the primary container, where your job's commands are run
+    steps:
+        - checkout # check out the code in the project directory
+        - run: echo "hello world" # run the `echo` command
+        - run: npm install
+        - run: npm test
+
