--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "bootstrap": "^4.4.1",
     "highcharts": "^8.0.0",
     "highcharts-react-official": "^3.0.0",
+    "husky": "^4.2.3",
+    "prettier": "^1.19.1",
+    "pretty-quick": "^2.0.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
@@ -19,7 +22,6 @@
     "react-table": "^7.0.0-rc.16"
   },
   "scripts": {
-    
     "start": "HTTPS=true react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -27,6 +29,11 @@
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   },
   "browserslist": {
     "production": [
