--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,27 +1,25 @@
 version: 2.1
 jobs:
   build:
-    docker: 
-        - image: circleci/node:12 # the primary container, where your job's commands are run
+    docker:
+      - image: circleci/node:12 # the primary container, where your job's commands are run
     steps:
-        - checkout # check out the code in the project directory
-        - run: echo "hello world" # run the `echo` command
-        - run: npm install 
-        - run: CI=true npm run-script build
+      - checkout # check out the code in the project directory
+      - run: echo "hello world" # run the `echo` command
+      - run: npm install
+      - run: npm run-script build
   test:
     docker:
-        - image: circleci/node:12 # the primary container, where your job's commands are run
+      - image: circleci/node:12 # the primary container, where your job's commands are run
     steps:
-        - checkout # check out the code in the project directory
-        - run: echo "hello world" # run the `echo` command
-        - run: npm install
-        - run: npm test
+      - checkout # check out the code in the project directory
+      - run: echo "hello world" # run the `echo` command
+      - run: npm install
+      - run: npm test
 
 workflows:
-    version: 2.1
-    build_test:
-        jobs:
-            - build 
-            - test 
-
-
+  version: 2.1
+  build_test:
+    jobs:
+      - build
+      - test
