--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "highcharts": "^8.0.0",
     "highcharts-react-official": "^3.0.0",
     "husky": "^4.2.3",
+    "node-sass": "^4.13.1",
     "prettier": "^1.19.1",
     "pretty-quick": "^2.0.1",
     "react": "^16.12.0",
