--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "scripts": {
     "start": "HTTPS=true react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --coverage --watchAll – ",
+    "test": "react-scripts test ",
+    "cover": "react-scripts test --coverage --watchAll –",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
