--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   },
   "devDependencies": {
     "@testing-library/react": "^9.4.0",
+    "@types/jest": "^25.2.1",
     "moxios": "^0.4.0"
   }
 }
